fixed white space under main-content lower 1000px

--- a/style/summary.css
+++ b/style/summary.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   width: 100%;
   background-color: var(--summary-color);
+  height: 100vh;
 }
 
 /* Container for the summary section */
